# fastapi-voters

./: .gitignore  README.md  api gi group.postman_collection.json  main.py  pyproject.toml
auth/: authentications.py  authorizations.py
controllers/: municipality.py  security.py  states.py  users.py  voters.py  votersTables.py
models/: db.py  models.py  preload_data.py  shcemas.py
